--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
 <body>
     <h1> Shipment Delays Causes </h1>
     <!--comment syntax-->
+    <div class="topnav">
+        <a class="active" href="#Home">Home</a>
+        <a href="2019">2019</a>
+        <a href="2020">2020</a>
+        <a href="2021">2021</a>
+        <a href="Solutions">Possible Solutions</a>
+        <a href="Sign Up">Sign Up</a>
+        <a href="Survey">Survey</a>
+      </div>
+   <time></time>
+    <h5>Introduction</h5>
+
 </body>
 </html>
