--- a/2021.html
+++ b/2021.html
@@ -28,13 +28,12 @@
       p {
         font-size: 14px;
       }
-  
 
 </style>
 </head>
 <body>
     
-    <h1> Shipment Delays Causes </h1>
+    <h1> Shipment Delays in 2021 </h1>
     <!--comment syntax-->
 
     <div class="topnav">
@@ -43,22 +42,18 @@
         <a href="2020">2020</a>
         <a href="2021">2021</a>
         <a href="Solutions">Possible Solutions</a>
-        <a href="Sign_Up">Sign Up</a>
+        <a href="Sign Up">Sign Up</a>
         <a href="Survey">Survey</a>
       </div>
-   <time></time>
-    <h4>Introduction</h4>
+   
+    <h4>How have shipment delays affected 2020?</h4>
+    <br> </br> <br> </br> <br> </br>
 
-     
-   <!--blank lines-->
-    <br> </br><br> </br><br> </br><br> </br><br> </br><br> </br>
-    <br> </br><br> </br><br> </br><br> 
-
-
-
-<footer>
-    <p>Maria Yagual </p>
-    <p>
-        <a href="mailto:myagual@brooklynsteamcenter.org">myagual@brooklynsteamcenter.org</a></p>
-  </footer>
+    <br> </br>
+    <footer>
+      <p>Maria Yagual </p>
+      <p>
+          <a href="mailto:myagual@brooklynsteamcenter.org">myagual@brooklynsteamcenter.org</a></p>
+    </footer>
+</body>
 </html>
