--- a/2019.html
+++ b/2019.html
@@ -28,13 +28,12 @@
       p {
         font-size: 14px;
       }
-  
 
 </style>
 </head>
 <body>
     
-    <h1> Shipment Delays Causes </h1>
+    <h1> Shipment Delays in 2019 </h1>
     <!--comment syntax-->
 
     <div class="topnav">
@@ -43,22 +42,27 @@
         <a href="2020">2020</a>
         <a href="2021">2021</a>
         <a href="Solutions">Possible Solutions</a>
-        <a href="Sign_Up">Sign Up</a>
+        <a href="Sign Up">Sign Up</a>
         <a href="Survey">Survey</a>
       </div>
-   <time></time>
-    <h4>Introduction</h4>
 
-     
-   <!--blank lines-->
-    <br> </br><br> </br><br> </br><br> </br><br> </br><br> </br>
-    <br> </br><br> </br><br> </br><br> 
+<h4>How were shipments before the pandemic?</h4>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
 
-
+<h4>Shipments during the pandemic</h4>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+</body>
 
 <footer>
-    <p>Maria Yagual </p>
-    <p>
-        <a href="mailto:myagual@brooklynsteamcenter.org">myagual@brooklynsteamcenter.org</a></p>
-  </footer>
+  <p>Maria Yagual </p>
+  <p>
+      <a href="mailto:myagual@brooklynsteamcenter.org">myagual@brooklynsteamcenter.org</a></p>
+</footer>
+
 </html>
