--- a/Survey.html
+++ b/Survey.html
@@ -1,1 +1,3 @@
 <!--NEEDS GOOGLE FORM ATTACHED-->
+
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSfCs8RPT5QmfCvTzJVMQkaOgXwq3zAnGB0GIC3ukzUblqtJbQ/viewform">Visit our survey!</a>
