--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!--comment syntax-->
 
     <div class="topnav">
-        <a class="active" href="index">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a href="2019">2019</a>
         <a href="2020">2020</a>
         <a href="2021">2021</a>
