--- a/Survey.html
+++ b/Survey.html
@@ -1,3 +1,6 @@
 <!--NEEDS GOOGLE FORM ATTACHED-->
 
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfCs8RPT5QmfCvTzJVMQkaOgXwq3zAnGB0GIC3ukzUblqtJbQ/viewform">Visit our survey!</a>
+
+
+<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fiterable.com%2Fblog%2F3-essential-ingredients-survey-feedback-campaigns%2F&psig=AOvVaw2ycmsu0VBpQtuJ9WT3kvMI&ust=1645105120638000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCLiK37jUhPYCFQAAAAAdAAAAABAU" alt="alternatetext">
