--- a/Survey.html
+++ b/Survey.html
@@ -2,4 +2,4 @@
 
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfCs8RPT5QmfCvTzJVMQkaOgXwq3zAnGB0GIC3ukzUblqtJbQ/viewform">Visit our survey!</a>
 
-<img src="Suvey1.png" alt="Survey Banner" style="width:500px;height:600px;">
+<img src="Survey1.png" alt="Survey Banner" style="width:700px;height:600px;">
