--- a/Survey.html
+++ b/Survey.html
@@ -1,5 +1,9 @@
 <!--NEEDS GOOGLE FORM ATTACHED-->
 
-<a href="https://docs.google.com/forms/d/e/1FAIpQLSfCs8RPT5QmfCvTzJVMQkaOgXwq3zAnGB0GIC3ukzUblqtJbQ/viewform">Visit our survey!</a>
+<br> </br><br> </br><br>
 
-<img src="Survey1.png" alt="Survey Banner" style="width:700px;height:600px;">
+<img src="hyou.jpg" alt="Survey Banner" style="width:700px;height:600p
+
+<br> </br><br> </br><br><br> </br><br> </br><br>
+
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSfCs8RPT5QmfCvTzJVMQkaOgXwq3zAnGB0GIC3ukzUblqtJbQ/viewform">Visi
