--- a/Survey.html
+++ b/Survey.html
@@ -1,9 +1,13 @@
 <!--NEEDS GOOGLE FORM ATTACHED-->
 
-<br> </br><br> </br><br>
+<br> </br>
 
-<img src="hyou.jpg" alt="Survey Banner" style="width:700px;height:600p
+<img src="hyou.jpg" alt="Survey Banner" width = "700" height = "300"> </a>
 
-<br> </br><br> </br><br><br> </br><br> </br><br>
+<br> </br><br> </br><br><br> 
 
-<a href="https://docs.google.com/forms/d/e/1FAIpQLSfCs8RPT5QmfCvTzJVMQkaOgXwq3zAnGB0GIC3ukzUblqtJbQ/viewform">Visi
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSfCs8RPT5QmfCvTzJVMQkaOgXwq3zAnGB0GIC3ukzUblqtJbQ/viewform">Visit our survey!</a> 
+
+
+
+  
