--- a/Survey.html
+++ b/Survey.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     
-    <h1> Survey Time! </h1>
+    <h1> Survey Time </h1>
     <!--comment syntax-->
 
     <div class="topnav">
