--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
         <a href="Sign_Up">Sign Up</a>
         <a href="Survey">Survey</a>
       </div>
-   <time></time>
+  
     <h4>Introduction</h4>
+
+    <img src="main1.jpg" alt="front" width = "700" height = "300"> </a>
 
      <p>Global supply chain</p>
    <!--blank lines-->
