--- a/2019.html
+++ b/2019.html
@@ -36,15 +36,7 @@
     <h1> Shipment Delays in 2019 </h1>
     <!--comment syntax-->
 
-    <div class="topnav">
-        <a class="active" href="#Home">Home</a>
-        <a href="2019">2019</a>
-        <a href="2020">2020</a>
-        <a href="2021">2021</a>
-        <a href="Solutions">Possible Solutions</a>
-        <a href="Sign Up">Sign Up</a>
-        <a href="Survey">Survey</a>
-      </div>
+    <iframe frameBorder="0" src="navigation.html"></iframe>
 
 <h4>How were shipments before the pandemic?</h4>
 <br></br>
