--- a/2021.html
+++ b/2021.html
@@ -36,24 +36,20 @@
     <h1> Shipment Delays in 2021 </h1>
     <!--comment syntax-->
 
-    <div class="topnav">
-        <a class="active" href="#Home">Home</a>
-        <a href="2019">2019</a>
-        <a href="2020">2020</a>
-        <a href="2021">2021</a>
-        <a href="Solutions">Possible Solutions</a>
-        <a href="Sign Up">Sign Up</a>
-        <a href="Survey">Survey</a>
-      </div>
+    <iframe frameBorder="0" src="navigation.html"></iframe>
    
     <h4>How have shipment delays affected 2020?</h4>
-    <br> </br> <br> </br> <br> </br>
-
-    <br> </br>
+    
+    <img src="Canal.jpeg" alt="front" width = "700" height = "300"> </a>
+    <br> </br><br> </br> <br> </br> <br> </br><br> </br>
     <footer>
       <p>Maria Yagual </p>
       <p>
           <a href="mailto:myagual@brooklynsteamcenter.org">myagual@brooklynsteamcenter.org</a></p>
-    </footer>
+          <h6> Sign Up </h6> 
+          <form> 
+              <table><tr> <td> First Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr> <td> Email Address: </td> <td> <input type=”Password” email=””> </td> </tr> </table> 
+              </form> 
+      </footer>
 </body>
 </html>
