--- a/Sign_Up.html
+++ b/Sign_Up.html
@@ -1,1 +1,19 @@
-<!--NEEDS FORM-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign Up</title>
+</head>
+<body>
+    <iframe frameBorder="0" src="navigation.html"></iframe>
+    <h1> Stay up to date </h1> 
+    <form> 
+        <table><tr> <td> First Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr> <td> Email Address: </td> <td> <input type=”Password” email=””> </td> </tr> </table> 
+        </form> 
+</body>
+</html>
+
+
+
