--- a/Solutions.html
+++ b/Solutions.html
@@ -37,16 +37,7 @@
     <!--comment syntax-->
     <!--https://www.w3schools.com/css/css_howto.asp-->
 
-    <div class="topnav">
-        <a class="active" href="#Home">Home</a>
-        <a href="2019">2019</a>
-        <a href="2020">2020</a>
-        <a href="2021">2021</a>
-        <a href="Solutions">Possible Solutions</a>
-        <a href="Sign Up">Sign Up</a>
-        <a href="Survey">Survey</a>
-      </div>
-   <time></time>
+    <iframe frameBorder="0" src="navigation.html"></iframe>
     <h4>Today</h4>
     <br></br><br></br><br></br><br></br><br></br>
     
@@ -55,9 +46,13 @@
     <br></br><br></br><br></br><br></br>
     <footer>
       <p>Maria Yagual </p>
-
       <p>
           <a href="mailto:myagual@brooklynsteamcenter.org">myagual@brooklynsteamcenter.org</a></p>
-    </footer>
+          <h6> Sign Up </h6> 
+          <form> 
+              <table><tr> <td> First Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr> <td> Email Address: </td> <td> <input type=”Password” email=””> </td> </tr> </table> 
+              </form> 
+      </footer>
+    
 </body>
 </html>
