--- a/Survey.html
+++ b/Survey.html
@@ -37,15 +37,7 @@
     <h1> Survey Time </h1>
     <!--comment syntax-->
 
-    <div class="topnav">
-        <a class="active" href="index.html">Home</a>
-        <a href="2019">2019</a>
-        <a href="2020">2020</a>
-        <a href="2021">2021</a>
-        <a href="Solutions">Possible Solutions</a>
-        <a href="Sign_Up">Sign Up</a>
-        <a href="Survey">Survey</a>
-      </div>
+    <iframe frameBorder="0" src="navigation.html"></iframe>
       <br> </br>
 
       <img src="hyou.jpg" alt="Survey Banner" width = "700" height = "300"> </a>
@@ -57,10 +49,15 @@
       <br> </br><br><br> <br> </br><br><br> 
 
 
-<footer>
-    <p>Maria Yagual </p>
-    <p>
-        <a href="mailto:myagual@brooklynsteamcenter.org">myagual@brooklynsteamcenter.org</a></p>
-  </footer>
+      <footer>
+        <p>Maria Yagual </p>
+        <p>
+            <a href="mailto:myagual@brooklynsteamcenter.org">myagual@brooklynsteamcenter.org</a></p>
+            <h6> Sign Up </h6> 
+            <form> 
+                <table><tr> <td> First Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr> <td> Email Address: </td> <td> <input type=”Password” email=””> </td> </tr> </table> 
+                </form> 
+        </footer>
+      
 </html>
 
