--- a/navigation.html
+++ b/navigation.html
@@ -15,6 +15,7 @@
     <a href="Solutions.html"target="_parent">Possible Solutions</a>
     <a href="Sign_Up.html"target="_parent">Sign Up</a>
     <a href="Survey.html"target="_parent">Survey</a>
+    <a href="Resources.html"target="_parent">Resources</a>
 
 </body>
 
