--- a/2019.html
+++ b/2019.html
@@ -38,7 +38,12 @@
 
     <iframe frameBorder="0" src="navigation.html"></iframe>
 
+
+
 <h4>How were shipments before the pandemic?</h4>
+
+
+<img src="CargoB.jpg" alt="front" width = "700" height = "300"> </a>
 <br></br>
 <br></br>
 <br></br>
