--- a/2020.html
+++ b/2020.html
@@ -38,7 +38,7 @@
     <iframe frameBorder="0" src="navigation.html"></iframe>
     
 
-
+    <img src="CargoD.jpg" alt="front" width = "700" height = "300"> </a>
 
     <br></br><br></br>
 
