--- a/Resources.html
+++ b/Resources.html
@@ -21,9 +21,10 @@
 
     <h4>Image References</h4>
     <ul>
-        <li><a href="https://commons.wikimedia.org/wiki/File:Ever_Given_in_Suez_Canal_viewed_from_ISS.jpg">Canal Suez </a></li> 
-        <li></li>
-        <li></li>
+        <li><a href="https://commons.wikimedia.org/wiki/File:Ever_Given_in_Suez_Canal_viewed_from_ISS.jpg">Canal Suez 2021 </a></li> 
+        <li><a href="https://images.unsplash.com/photo-1494412574643-ff11b0a5c1c3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80">Cargo 2020  </a></li>
+        <li><a href="https://images.unsplash.com/photo-1597139416651-bf9a3b3e9014?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2044&q=80">Cargo 2021 </a></li>
+        
       </ul>
 </body>
 </html>
