--- a/2020.html
+++ b/2020.html
@@ -36,12 +36,12 @@
     <h1> Shipment Delays in 2020 </h1>
     <!--comment syntax-->
     <iframe frameBorder="0" src="navigation.html"></iframe>
-    
+    <h3>What happened in 2020?</h3>
 
     <img src="CargoD.jpg" alt="front" width = "700" height = "300"> </a>
 
     <br></br><br></br>
-
+    <hr></hr> 
     <footer>
       <p>Maria Yagual </p>
       <p>
