--- a/Resources.html
+++ b/Resources.html
@@ -7,6 +7,7 @@
     <title>Resources</title>
 </head>
 <body>
+    <iframe frameBorder="0" src="navigation.html"></iframe>
     <h1> Resources</h1>
     <p> Here you will find external resources to do reseach on your own. </p>
 
