--- a/Solutions.html
+++ b/Solutions.html
@@ -26,7 +26,7 @@
         font-size: 20px;
       }
       p {
-        font-size: 14px;
+        font-size: 16px;
       }
 
 </style>
@@ -43,6 +43,9 @@
     
     
     <h4>What measures should you take? </h4>
+
+
+    <p> The pandemic has uncovered the delicacy of the US operations industry. Producing delivery delays and brought freight stacking up in port terminals as well as in rail yards and distribution centers. Basic gear, such as steel trailers and truck undercarriage, is inaccessible, making circulation focuses foster profound accumulations.</p>
     <br></br><br></br><br></br><br></br>
     <hr></hr> 
     <footer>
