--- a/2019.html
+++ b/2019.html
@@ -6,37 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shipment Delays</title>
 <style>
-    h1 {
-        font-size: 45px;
-      }
-      
-      h2 {
-        font-size: 40px;
-      }
-      h3 {
-        font-size: 35px;
-      }
-      h4 {
-        font-size: 30px;
-      }
-      h5 {
-        font-size: 25px;
-      }
-      h6 {
-        font-size: 20px;
-      }
-      p {
-        font-size: 16px;
-      }
 
 </style>
 </head>
 <body>
-    
+  <link rel="stylesheet" href="style.css">
     <h1> Shipment Delays in 2019 </h1>
     <!--comment syntax-->
 
-    <iframe frameborder="0" src="navigation.html"></iframe>
+    <iframe frameborder="0" src="navigation.html" width = "780" height = "80"></iframe>
 
 
 
@@ -57,10 +35,17 @@
 <br> 
 </body>
 <hr>  
+
 <footer>
-  <p>Maria Yagual </p>
+  <p>Maria Yagual</p>
+  
   <p>
       <a href="mailto:myagual@brooklynsteamcenter.org">myagual@brooklynsteamcenter.org</a></p>
+      <h6> Sign Up </h6> 
+      <form> 
+        <table><tr> <td> First Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type=”text” name=”"> </td> </tr> <tr> <td> Email Address: </td> <td> <input type=”Password” email=””> </td> </tr> </table> 
+      </form> 
+
 </footer>
 
 </html>
