--- a/2020.html
+++ b/2020.html
@@ -6,36 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shipment Delays</title>
 <style>
-    h1 {
-        font-size: 45px;
-      }
-      
-      h2 {
-        font-size: 40px;
-      }
-      h3 {
-        font-size: 35px;
-      }
-      h4 {
-        font-size: 30px;
-      }
-      h5 {
-        font-size: 25px;
-      }
-      h6 {
-        font-size: 20px;
-      }
-      p {
-        font-size: 16px;
-      }
 
 </style>
 </head>
 <body>
-    
+  <link rel="stylesheet" href="style.css">
     <h1> Shipment Delays in 2020 </h1>
     <!--comment syntax-->
-    <iframe frameborder="0" src="navigation.html"></iframe>
+    <iframe frameborder="0" src="navigation.html"  width = "780" height = "80"></iframe>
     <h3>What happened in 2020?</h3>
 
     <img src="CargoD.jpg" alt="front" width = "700" height = "400"> 
