--- a/Sign_Up.html
+++ b/Sign_Up.html
@@ -7,7 +7,8 @@
     <title>Sign Up</title>
 </head>
 <body>
-    <iframe frameBorder="0" src="navigation.html"></iframe>
+    <link rel="stylesheet" href="style.css">
+    <iframe frameborder="0" src="navigation.html" width = "780" height = "80"></iframe>
     <h1> Stay up to date </h1> 
     <form> 
         <table><tr> <td> First Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr> <td> Email Address: </td> <td> <input type=”Password” email=””> </td> </tr> </table> 
