--- a/index.html
+++ b/index.html
@@ -6,42 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shipment Delays</title>
 <style>
-    h1 {
-        font-size: 45px;
-      }
-      
-      h2 {
-        font-size: 40px;
-      }
-      h3 {
-        font-size: 35px;
-      }
-      h4 {
-        font-size: 30px;
-      }
-      h5 {
-        font-size: 25px;
-      }
-      h6 {
-        font-size: 20px;
-      }
-      p {
-        font-size: 16px;
-      }
   
-
 </style>
 </head>
 <body>
-    
-    <h1> Shipment Delays Causes </h1>
+  <link rel="stylesheet" href="style.css">
+    <h1> <strong>Shipment Delays Causes </strong></h1>
     <!--comment syntax-->
 
-    <iframe frameborder="0" src="navigation.html"></iframe>
+    <iframe frameborder="0" src="navigation.html" width = "756" height = "80"></iframe>
   
     <h4>Introduction</h4>
 
-    <img src="main1.jpg" alt="front" width = "700" height = "300"> 
+    <img src="main1.jpg" alt="front" width = "700" height = "350"> 
 
 
     <h4> Have you ever got your package delivered at a later day? Have you notice the lack of certain products in stores? </h4>
@@ -54,16 +31,17 @@
     <br>
     <hr> 
 
- <!--
+ 
     <footer>
-      <p>Maria Yagual </p>
+      <p>Maria Yagual</p>
+      <br>
       <p>
           <a href="mailto:myagual@brooklynsteamcenter.org">myagual@brooklynsteamcenter.org</a></p>
           <h6> Sign Up </h6> 
           <form> 
-              <table><tr> <td> First Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type=”text” name=”"> </td> </tr> <tr> <td> Email Address: </td> <td> <input type=”Password” email=””> </td> </tr> </table> 
-              </form> 
-      </footer>
--->
+            <table><tr> <td> First Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type=”text” name=”"> </td> </tr> <tr> <td> Email Address: </td> <td> <input type=”Password” email=””> </td> </tr> </table> 
+          </form> 
+    </footer>
+
 </body>
 </html>
