--- a/navigation.html
+++ b/navigation.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document </title>
 </head>
 
 <body>
-    <a href="index.html" target="_parent">Home</a>
-    <a href="2019.html" target="_parent">2019</a>
-    <a href="2020.html"target="_parent"> 2020</a>
-    <a href="2021.html"target="_parent">2021</a>
-    <a href="Solutions.html"target="_parent">Possible Solutions</a>
-    <a href="Sign_Up.html"target="_parent">Sign Up</a>
-    <a href="Survey.html"target="_parent">Survey</a>
-    <a href="Resources.html"target="_parent">Resources</a>
-
+    <link rel="stylesheet" href="style.css">
+    <ul>
+        
+        <li> <a href="index.html" target="_parent">Home</a></li>
+        <li><a href="2019.html" target="_parent">2019</a></li>
+        <li><a href="2020.html" target="_parent"> 2020</a></li>
+        <li><a href="2021.html" target="_parent">2021</a></li>
+        <li><a href="Solutions.html" target="_parent">Possible Solutions</a></li>
+        <li><a href="Sign_Up.html" target="_parent">Sign Up</a></li>
+        <li><a href="Survey.html" target="_parent">Survey</a></li>
+        <li><a href="Resources.html" target="_parent">Resources</a></li>
+        
+    </ul>
 </body>
 
 </html>
