--- a/Resources.html
+++ b/Resources.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Resources</title>
 </head>
 <body>
-    <iframe frameborder="0" src="navigation.html" width = "700" height = "80"></iframe>
+    <iframe frameborder="0" src="navigation.html" width = "757" height = "80"></iframe>
     <h1> Resources</h1>
     <p> Here you will find external resources to do reseach on your own. </p>
 
     <h4>Text References</h4>
     <ul>
-        <li><a href="https://www.pwc.com/gr/en/industries/shipping-covid-19.html">Shipping industry responding to the COVID-19 </a></li>
-        <li><a href="https://unctad.org/news/shipping-during-covid-19-why-container-freight-rates-have-surged">Shipping during COVID-19: Why container freight rates have surged </a></li>
-        <li><a href="https://www.agcs.allianz.com/news-and-insights/expert-risk-articles/shipping-safety-21-covid.html">Safety and Shipping Review 2021:
-            The Covid factors</a></li>
+        <ol><a href="https://www.pwc.com/gr/en/industries/shipping-covid-19.html">Shipping industry responding to the COVID-19 </a></ol>
+        <ol><a href="https://unctad.org/news/shipping-during-covid-19-why-container-freight-rates-have-surged">Shipping during COVID-19: Why container freight rates have surged </a></ol>
+        <ol><a href="https://www.agcs.allianz.com/news-and-insights/expert-risk-articles/shipping-safety-21-covid.html">Safety and Shipping Review 2021:
+            The Covid factors</a></ol>
     </ul>
 
 
     <h4>Image References</h4>
     <ul>
-        <li><a href="https://commons.wikimedia.org/wiki/File:Ever_Given_in_Suez_Canal_viewed_from_ISS.jpg">Canal Suez 2021 </a></li> 
-        <li><a href="https://images.unsplash.com/photo-1494412574643-ff11b0a5c1c3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80">Cargo 2020  </a></li>
-        <li><a href="https://images.unsplash.com/photo-1597139416651-bf9a3b3e9014?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2044&q=80">Cargo 2021 </a></li>
+        <ul><a href="https://commons.wikimedia.org/wiki/File:Ever_Given_in_Suez_Canal_viewed_from_ISS.jpg">Canal Suez 2021 </a></li> 
+        <ul><a href="https://images.unsplash.com/photo-1494412574643-ff11b0a5c1c3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2670&q=80">Cargo 2020  </a></li>
+        <ul><a href="https://images.unsplash.com/photo-1597139416651-bf9a3b3e9014?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2044&q=80">Cargo 2021 </a></li>
         
       </ul>
 </body>
