--- a/Sign_Up.html
+++ b/Sign_Up.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Sign Up</title>
 </head>
 <body>
-    <link rel="stylesheet" href="style.css">
-    <iframe frameborder="0" src="navigation.html" width = "780" height = "80"></iframe>
     <h1> Stay up to date </h1> 
+    <iframe frameborder="0" src="navigation.html" width = "780" height = "80"></iframe>
+    
+<h4>Fill out this form </h4>
     <form> 
         <table><tr> <td> First Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr> <td> Email Address: </td> <td> <input type=”Password” email=””> </td> </tr> </table> 
         </form> 
