--- a/2021.html
+++ b/2021.html
@@ -31,7 +31,7 @@
           <a href="mailto:myagual@brooklynsteamcenter.org">myagual@brooklynsteamcenter.org</a></p>
           <h6> Sign Up </h6> 
           <form> 
-              <table><tr> <td> First Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr> <td> Email Address: </td> <td> <input type=”Password” email=””> </td> </tr> </table> 
+              <table><tr> <td> First Name: </td> <td> <input type= "text" name="text"> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type= "text" name="text"> </td> </tr> <tr> <td> Email Address: </td> <td> <input type= "email" email="text"> </td> </tr> </table> 
               </form> 
       </footer>
 </body>
