--- a/Sign_Up.html
+++ b/Sign_Up.html
@@ -8,12 +8,13 @@
     <title>Sign Up</title>
 </head>
 <body>
-    <h1> Stay up to date </h1> 
-    <iframe frameborder="0" src="navigation.html" width = "780" height = "80"></iframe>
+    <h1> <strong>Shipment Delays Causes </strong></h1>
     
+    <iframe frameborder="0" src="navigation.html" width = "780" height = "80"></iframe>
+    <h2> Stay up to date </h2> 
 <h4>Fill out this form </h4>
     <form> 
-        <table><tr> <td> First Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr> <td> Email Address: </td> <td> <input type=”Password” email=””> </td> </tr> </table> 
+        <table><tr> <td> First Name: </td> <td> <input type= "password" name= "text"> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type="password"  name="text"> </td> </tr> <tr> <td> Email Address: </td> <td> <input type= "password" email="email"> </td> </tr> </table> 
         </form> 
 </body>
 </html>
