--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
 
     <iframe frameborder="0" src="navigation.html" width = "756" height = "80"></iframe>
   
-    <h4>Introduction</h4>
+    <h4> Packages being delivered late? Noticed the lack of products in stores? </h4>
+
+    <p> You are not alone. In the recent years we have seen problems with supply and demand. The reason behind it, is simple. Products travel through land or sea for more efficiency. Yet this has completely changed with the current pandemic. Through 2020 to now we faced one of the most impactful global supply chains. The demand of products raised at the peak of the pandemic whether it was toilet paper or lyson sprays. Within three years we have faced long waits for packages to a ship stuck in one the most transited canals. This has impacted everyone, not only NYC or LA but all countries. 
+    </p>
+
+   
+
 
     <img src="main1.jpg" alt="front" width = "700" height = "350"> 
 
-
-    <h4> Have you ever got your package delivered at a later day? Have you notice the lack of certain products in stores? </h4>
-    <p> You are not alone. In the recent years we have seen problems with supply and demand. The reason behind it, is simple. Products travel through land or sea for more efficiency. Yet this has completely changed with the current pandemic. Through 2020 to now we faced one of the most impactful global supply chains. The demand of products raised at the peak of the pandemic whether it was toilet paper or lyson sprays. Within three years we have faced long waits for packages to a ship stuck in one the most transited canals. This has impacted everyone, not only NYC or LA but all countries. We may think, this doesn't impact me because I don't shop online. However, this is the complete opposite, it has targeted our economy. The disruption of market brings higher prices. With the multiple variants, Delta, Omicron, Flurona etc. Now, we must work together to find a solution and combat this issue. 
-    </p>
-
-    <p>When the quantity of new COVID-19 cases begins to decline, limit imperatives and work deficiencies should ease, taking a portion of the strain off supply chains and conveyance times. In any case, a few specialists accept that there's probably not going to be quick help from inventory network disturbances. Raised request during the Christmas season in a portion of the world's biggest economies, one more rush of new COVID-19 cases, and outrageous climate occasions, assuming they emerge, could cause inventory network disturbances.</p>
-
+    <p>We may think, this doesn't impact me because I don't shop online. However, this is the complete opposite, it has targeted our economy. The disruption of market brings higher prices. With the multiple variants, Delta, Omicron, Flurona etc. Now, we must work together to find a solution and combat this issue. When the quantity of new COVID-19 cases begins to decline, limit imperatives and work deficiencies should ease, taking a portion of the strain off supply chains and conveyance times. In any case, a few specialists accept that there's probably not going to be quick help from inventory network disturbances. Raised request during the Christmas season in a portion of the world's biggest economies, one more rush of new COVID-19 cases, and outrageous climate occasions, assuming they emerge, could cause inventory network disturbances.</p>
+   
   
     <br>
     <hr> 
@@ -34,12 +35,13 @@
  
     <footer>
       <p>Maria Yagual</p>
-      <br>
+      <br><br>
+      <br><br>
       <p>
           <a href="mailto:myagual@brooklynsteamcenter.org">myagual@brooklynsteamcenter.org</a></p>
           <h6> Sign Up </h6> 
           <form> 
-            <table><tr> <td> First Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type=”text” name=”"> </td> </tr> <tr> <td> Email Address: </td> <td> <input type=”Password” email=””> </td> </tr> </table> 
+            <table><tr> <td> First Name: </td> <td> <input type= "text" name="text"> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type="text" name="text"> </td> </tr> <tr> <td> Email Address: </td> <td> <input type="email" email="text"> </td> </tr> </table> 
           </form> 
     </footer>
 
