--- a/Survey.html
+++ b/Survey.html
@@ -11,10 +11,11 @@
 </head>
 <body>
   <link rel="stylesheet" href="style.css">
-    <h1> Survey Time </h1>
+    
     <!--comment syntax-->
-
+    <h1> <strong>Shipment Delays Causes </strong></h1>
     <iframe frameborder="0" src="navigation.html" width = "780" height = "80"></iframe>
+      <h2> Survey Time </h2>
       <br> 
 
       <img style="float: left;" src="hyou.jpg" alt="Survey Banner" width = "700" height = "300"> 
@@ -38,7 +39,7 @@
             <a href="mailto:myagual@brooklynsteamcenter.org">myagual@brooklynsteamcenter.org</a></p>
             <h6> Sign Up </h6> 
             <form> 
-                <table><tr> <td> First Name: </td> <td> <input type= ”text” name=”text”> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr> <td> Email Address: </td> <td> <input type=”Password” email=””> </td> </tr> </table> 
+                <table><tr> <td> First Name: </td> <td> <input type="text" name="text"> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type= "text" name="text"> </td> </tr> <tr> <td> Email Address: </td> <td> <input type= "email" email= "text"> </td> </tr> </table> 
                 </form> 
   </footer>
 </html>
