--- a/2020.html
+++ b/2020.html
@@ -5,12 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shipment Delays</title>
-<style>
-
-</style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <link rel="stylesheet" href="style.css">
+
     <h1> Shipment Delays in 2020 </h1>
     <!--comment syntax-->
     <iframe frameborder="0" src="navigation.html"  width = "780" height = "80"></iframe>
@@ -40,7 +38,7 @@
           <a href="mailto:myagual@brooklynsteamcenter.org">myagual@brooklynsteamcenter.org</a></p>
           <h6> Sign Up </h6> 
           <form> 
-              <table><tr> <td> First Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type=”text” name=””> </td> </tr> <tr> <td> Email Address: </td> <td> <input type=”Password” email=””> </td> </tr> </table> 
+              <table><tr> <td> First Name: </td> <td> <input type= "text" name="text"> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type="text" name="text"> </td> </tr> <tr> <td> Email Address: </td> <td> <input type="email" email="text"> </td> </tr> </table> 
               </form> 
       </footer>
     
