--- a/Resources.html
+++ b/Resources.html
@@ -23,6 +23,8 @@
   }
   h4 {
     font-size: 40px;
+    margin-top: 3px;
+    margin-bottom: 3px;
   }
   h5 {
     font-size: 35px;
@@ -45,8 +47,15 @@
     color: #094067;
     font-size: 60px;
     font-weight: 700px;
+    margin-top: 10px;
+    margin-bottom: 3px;
   }
+  ul {
+    font-size: 20px;
 
+  }
+  
+  
 
 
   footer{
@@ -81,5 +90,15 @@
         <li><a href="https://images.unsplash.com/photo-1597139416651-bf9a3b3e9014?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2044&q=80">Cargo 2021 </a></li>
         
     </ul>
+      <footer>
+      <p>Maria Yagual</p>
+      <br><br>
+      <p>
+          <a href="mailto:myagual@brooklynsteamcenter.org">myagual@brooklynsteamcenter.org</a></p>
+          <h6> Sign Up </h6> 
+          <form> 
+            <table><tr> <td> First Name: </td> <td> <input type= "text" name="text"> </td> </tr> <tr></tr> <tr> <td> Last Name: </td> <td> <input type="text" name="text"> </td> </tr> <tr> <td> Email Address: </td> <td> <input type="email" email="text"> </td> </tr> </table> 
+          </form> 
+    </footer>
  </body>
 </html>
